add keycloak config